[tool.poetry]
name = "labby"
version = "0.0.1"
description = "An utility for controlling laboratory equipment"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/luizribeiro/labby/"
repository = "https://github.com/luizribeiro/labby/"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]
keywords = [
  "experiments",
  "instruments",
  "lab automation",
  "laboratory",
  "science",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/luizribeiro/labby/issues"

[tool.poetry.scripts]
labby = 'labby.cli:main'

[tool.poetry.dependencies]
python = "^3.7.1"
mashumaro = "2.2"
pandas = "1.2.3"
pynng = "0.7.1"
pyre-extensions = "0.0.21"
pyserial = "3.5"
strictyaml = "1.4.0"
typed-argument-parser = "1.6.2"
wasabi = "0.8.2"

[tool.poetry.dev-dependencies]
flake8 = "3.9.0"
freezegun = "1.1.0"
green = "3.2.5"
pre-commit = "2.12.0"
pyre-check = "0.9.0"
python-language-server = "0.36.2"
black = "20.8b1"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
